[project]
name = "fec-database"
version = "0.1.0"
description = "Build a queryable DuckDB database from FEC campaign finance bulk data"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "requests",
    "tqdm",
    "huggingface_hub",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
